[gd_scene load_steps=9 format=3 uid="uid://ccut38phxum81"]

[ext_resource type="Script" path="res://player/Camera.gd" id="1"]
[ext_resource type="Script" path="res://player/Player.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bmkh3cq8habrl" path="res://player/flashlight/Flashlight.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cexv8rg2sqgk2" path="res://player/character.glb" id="5_k80fq"]
[ext_resource type="Script" path="res://player/player_input.gd" id="5_laemn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rhw8e"]
radius = 0.696189
height = 1.6843

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xcq08"]
properties/0/path = NodePath("PlayerInput:direction")
properties/0/spawn = false
properties/0/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wldpf"]
properties/0/path = NodePath(".:player")
properties/0/spawn = true
properties/0/replication_mode = 0
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Camera/Flashlight:enabled")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
wall_min_slide_angle = 0.785398
script = ExtResource("2")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 9.09495e-15, 0, -9.09495e-15, 1, 0, 0, 0, 1, -9.31323e-10, 1.67742, 0.13534)
cull_mask = 524287
fov = 80.0
near = 0.01
far = 500.0
script = ExtResource("1")

[node name="Flashlight" parent="Camera" instance=ExtResource("3")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
enabled = true

[node name="BallCarrier" type="Node3D" parent="Camera"]
unique_name_in_owner = true
transform = Transform3D(1, -9.09495e-15, 0, 9.09495e-15, 1, 0, 0, 0, 1, 9.31325e-10, -0.248264, -2.07024)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0116229, 0.85985, 0.234238)
shape = SubResource("CapsuleShape3D_rhw8e")

[node name="PlayerInput" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xcq08")
script = ExtResource("5_laemn")

[node name="ServerSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_wldpf")

[node name="Underwater" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Underwater"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0235294, 0.172549, 0.501961)

[node name="BallSelector" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.61875, 0)
target_position = Vector3(0, -2, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="character" parent="." instance=ExtResource("5_k80fq")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.233046)

[connection signal="toggled" from="Camera/Flashlight" to="." method="_on_flashlight_toggled"]
